# ot-visibility-model

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: adversarial-qa.md  calibration-sources.md  methodology.md
src/: __init__.py  cli.py  constants.py  sensitivity.py
src/assets/: __init__.py  graph.py
src/hypotheses/: __init__.py  runner.py
src/simulation/: __init__.py  engine.py
src/utils/: __init__.py
src/visualization/: __init__.py  dashboard.py  plots.py
tests/: test_core.py
